--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "build-css": "node-sass-chokidar src/ -o src/",
-    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive"
+    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
+    "deploy": "npm run build&&gh-pages -d build"
   },
   "devDependencies": {
     "gh-pages": "^1.0.0"
   },
-  "homepage": "http://linton-portman.github.io/Markdown-Previewer",
-  "deploy": "npm run build&&gh-pages -d build"
+  "homepage": "http://linton-portman.github.io/Markdown-Previewer"
+  
 }
